Mon,  2 Apr 2007 14:11:29 +0200 <thp@perli.net>
        * src/gpodder/libgpodder.py: Added some sanity checks to get_size()
        * src/gpodder/gpodder.py: Implemented a message dialog informing the 
          user about a failed download directory move operation; thanks to 
          Andy (apblist speakeasy.net) for suggesting this usability
          improvement (in case of write errors, etc..)

Mon,  2 Apr 2007 13:42:21 +0200 <thp@perli.net>
        * src/gpodder/libplayers.py: Added /usr/share/applications/kde/ to 
          list of directories to search for ".desktop" files so that gPodder 
          will also detect KDE player applications (at least on Gentoo); 
          thanks to Gerrit Sangel (z0idberg gmx.de) for pointing that out
        * bin/gpodder: pushed version + release date

Sun,  1 Apr 2007 19:45:28 +0200 <thp@perli.net>
        * src/gpodder/libtagupdate.py: Return false on error
        * src/gpodder/libpodcasts.py: Don't set the album tag to "gPodder 
          podcasts" when tagging downloaded files
        * src/gpodder/libgpodder.py: save/restore main window size and position
        * src/gpodder/libipodsync.py: Update tags on converted MP3 files, so 
          applications accessing files on the iPod without reading the meta-
          data in the iTunesDB will be able to correctly identify the episodes;
          do not set the track artist to "gPodder podcast" when syncing to the
          podcasts playlist
        * src/gpodder/gpodder.py: Fix bad behaviour of the available podcasts
          treeview (thanks to Pieter De Decker [pdedecker gmail com] for 
          bringing this problem to my attention); save and restore window size 
          and position of gPodder's main window; fix some strings to ease 
          translations
        * data/gpodder.glade: Make certain strings in the toolbar translatable
          thanks to Pieter De Decker for pointing that out :)