@@ -1,3 +1,8 @@
+Mon,  2 Apr 2007 16:31:46 +0200 <thp@perli.net>
+        * src/gpodder/gpodder.py: Added some intelligence for enabling and 
+          disabling the "cancel download" toolbar button depending on the 
+          current downloading status (disable when not downloading)
+
 Mon,  2 Apr 2007 14:11:29 +0200 <thp@perli.net>
         * src/gpodder/libgpodder.py: Added some sanity checks to get_size()
         * src/gpodder/gpodder.py: Implemented a message dialog informing the 
